--- a/.harness/Build_pipeline_1704190569539.yaml
+++ b/.harness/Build_pipeline_1704190569539.yaml
@@ -23,7 +23,7 @@ pipeline:
             os: Linux
             arch: Amd64
           runtime:
-            type: Cloud
+            type: Docker
             spec: {}
     - stage:
         name: T
