chore(ingress): fix ingress

--- a/cv-ui/cv-ui-ingress.yaml
+++ b/cv-ui/cv-ui-ingress.yaml
@@ -4,7 +4,10 @@ metadata:
   name: cv-ui-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      if ($request_uri !~* ^/.well-known) {
+        return 301 $scheme://my.site.com$request_uri;
+      }
 spec:
   ingressClassName: nginx
   tls:
