--- a/cv-ui/cv-ui-ingress.yaml
+++ b/cv-ui/cv-ui-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cv-ui-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    cert-manager.io/issue-temp-cert: true
+    cert-manager.io/issue-temporary-certificate: "true"
 spec:
   ingressClassName: nginx
   tls:
