--- a/cv-ui/cv-ui-ingress.yaml
+++ b/cv-ui/cv-ui-ingress.yaml
@@ -6,15 +6,15 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: nginx
-  tls:
-    - hosts:
-        - cv.k8s.twy.gmbh
-      secretName: cv-tls
+  # tls:
+  #   - hosts:
+  #       - cv.k8s.twy.gmbh
+  #     secretName: cv-tls-prod
   rules:
     - host: cv.k8s.twy.gmbh
       http:
         paths:
-          - path: /
+          - path: "/"
             pathType: Prefix
             backend:
               service:
