--- a/apps/vaultwarden/templates/deployment-vaultwarden-release.yaml
+++ b/apps/vaultwarden/templates/deployment-vaultwarden-release.yaml
@@ -1,6 +1,6 @@
-# Source: vaultwarden/templates/statefulset.yaml
+# Source: vaultwarden/templates/deployment.yaml
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: vaultwarden-release
   namespace: vaultwarden
@@ -12,7 +12,6 @@ metadata:
     app.kubernetes.io/version: "1.30.1"
     app.kubernetes.io/managed-by: Helm
 spec:
-  serviceName: vaultwarden
   replicas: 1
   selector:
     matchLabels:
@@ -29,7 +28,6 @@ spec:
         checksum/config: 477926414c665edda40ec4ba5e189336f35248e2
         checksum/secret: 2e6a40e68134bb470cb2952753bd4de99cd0d894
     spec:
-      
       containers:
         - image: docker.io/vaultwarden/server:1.30.1-alpine
           imagePullPolicy: IfNotPresent
@@ -51,10 +49,9 @@ spec:
               name: websocket
               protocol: TCP
           volumeMounts:
-            - name: vaultwarden-data
+            - name: vaultwarden-nfs-pvc
               mountPath: /data
-          resources:
-                  {}
+          resources: {}
           livenessProbe:
             httpGet:
               path: /alive
@@ -74,25 +71,7 @@ spec:
             successThreshold: 1
             failureThreshold: 3
       serviceAccountName: vaultwarden-svc
-  persistentVolumeClaimRetentionPolicy:
-    whenDeleted: Retain
-    whenScaled: Retain
-  volumeClaimTemplates:
-    - metadata:
-        name: vaultwarden-data
-        labels:
-            helm.sh/chart: vaultwarden-0.19.0
-            app.kubernetes.io/name: vaultwarden
-            app.kubernetes.io/instance: vaultwarden-release
-            app.kubernetes.io/version: "1.30.1"
-            app.kubernetes.io/managed-by: Helm
-        annotations:
-          meta.helm.sh/release-name: "vaultwarden-release"
-          meta.helm.sh/release-namespace: "vaultwarden"
-      spec:
-        accessModes:
-          - "ReadWriteOnce"
-        resources:
-          requests:
-            storage: 2Gi
-        storageClassName: "nfs-csi"
+      volumes:
+        - name: vaultwarden-nfs-pvc
+          persistentVolumeClaim:
+            claimName: vaultwarden-data-vaultwarden-release-0
