--- a/apps/vaultwarden/templates/deployment-vaultwarden-release.yaml
+++ b/apps/vaultwarden/templates/deployment-vaultwarden-release.yaml
@@ -26,7 +26,7 @@ spec:
         app.kubernetes.io/instance: vaultwarden-release
       annotations:
         checksum/config: 477926414c665edda40ec4ba5e189336f35248e2
-        checksum/secret: 2e6a40e68134bb470cb2952753bd4de99cd0d894
+        checksum/secret: 82559ee97e52f551a155000d7c64e09ac220445e
     spec:
       containers:
         - image: docker.io/vaultwarden/server:1.30.1-alpine
@@ -39,7 +39,7 @@ spec:
             - name: ADMIN_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: vaultwarden-release
+                  name: secret-vaultwarden
                   key: ADMIN_TOKEN
           ports:
             - containerPort: 8080
